--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx",
-    "shims-vue.d.ts"  ],
+    "shims-vue.d.ts",
+    "CNAME"  ],
   "exclude": [
     "node_modules"
   ]
